--- a/ContactMe.html
+++ b/ContactMe.html
@@ -11,11 +11,22 @@
         
     </header>
     <main>
-        <form id="Email">
-            <input id="ESubject" type="text" placeholder="Subject"><br />
-            <input id="EBody" type="text" placeholder="body"><br />
-            <input id="ESubmit" type="submit" placeholder="Send">
-        </form>
+        <form
+  action="https://formspree.io/f/mbjnbgbv"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input  id="ESubject" type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea id="EBody" name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button id="ESubmit"  type="submit">Send</button>
+</form>
+   
     </main>
     <footer></footer>
 </body>
