some style changes

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Quinton Taylor</title>
     <link rel="stylesheet" href="styles/style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 </head>
 <body>
     <div id="menu">
-        <img id="hbMenu" src="./components/views/images/hbMenu.png" />
+        <img id="hbMenu" src="./components/views/assets/img/hbMenu.png" />
     <span id="socials">
         <a href="#" class="fa fa-facebook"></a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="#" class="fa fa-linkedin"></a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -20,8 +21,8 @@
     </span>
 </div>
     <main>
-        <svg id="slide" width="250" height="590">
-            <rect x="10" y="10" width="250" height="5900" fill="black">
+        <!-- <svg id="slide" width="250" height="590">
+            <rect x="10" y="10" width="250" height="5900" fill="black"> -->
 
             </rect>
         </svg>
@@ -29,7 +30,7 @@
         <div id="root"></div>
 
         <script src="index.js" type="module"></script>
-        <script src="js/special.js" type="module"></script>
+        <script src="./js/special.js" type="module"></script>
  
         </body>
     </main>
